size = 48x48
actioniconsdir = $(pkgdatadir)/icons/hicolor/$(size)/actions
appiconsdir = $(datadir)/icons/hicolor/$(size)/apps

dist_appicons_DATA = \
	apps/xviewer.png
dist_actionicons_DATA = \
    actions/view-fit-height-symbolic.png \
    actions/view-fit-width-symbolic.png \
	actions/slideshow-play.png

-include $(top_srcdir)/git.mk
